@@ -17,6 +17,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+server/apply.c: Fix check_weapon_power so that it finds proper wc object.
+   Fix unapply_for_ob so that it won't unequip cursed/damned weapons if
+   player switches objects.
+MSW 2003-11-11
+
 bulk of this is to fix exp loss when changing gods if you have more than
 2 billion exp, removal of spells when you switch levels, and not giving you
 all new spells when you switch religions.
